--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,8 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <input type="text" class="chatbox">
+      <button type="button" class="send">send</button>
       <div class="messages">
       </div>
     </div>
