Created Room drop down menu

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
       <!-- Your HTML goes here! -->
       <input type="text" class="chatbox">
       <button type="button" class="send">send</button>
+      <select class="rooms"></select>
       <div class="messages">
       </div>
     </div>
