Allows users to change rooms

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
       <input type="text" class="chatbox">
       <button type="button" class="send">send</button>
       <select class="rooms"></select>
+      <button type="button" class="changeRoom">change room</button>
       <div class="messages">
       </div>
     </div>
