Prevent room drop down from refreshing

--- a/client/index.html
+++ b/client/index.html
@@ -18,9 +18,9 @@
       <!-- Your HTML goes here! -->
       <input type="text" class="chatbox">
       <button type="button" class="send">send</button>
-      <select class="rooms"></select>
+      <select id="roomSelect"></select>
       <button type="button" class="changeRoom">change room</button>
-      <div class="messages">
+      <div id="chats">
       </div>
     </div>
   </body>
