Created functionality to add rooms and send it to server

--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,12 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <input type="text" class="chatbox">
+      <input type="text" class="chatbox"/>
       <button type="button" class="send">send</button>
       <select id="roomSelect"></select>
       <button type="button" class="changeRoom">change room</button>
+      <input type="text" class="addRoom"/>
+      <button type="button" class="addRoom">add room</button>
       <div id="chats">
       </div>
     </div>
