Fixed submit button to prevent page from refreshing and to ACTUALLY pass spec

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <form id="send" onsubmit="return false">
+      <form id="send">
         <input type="text" id="message"/>
         <input type="submit" class="submit"></input>
       </form>
